--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>iView test page</title>
+    <title>hilbert-vue-ui</title>
     <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1"/>
     <!-- <link href="/test/dist/main.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="//at.alicdn.com/t/font_561788_xmxyxv1zljo.css">
